Add Navigator panel to mesh warper UI (#807)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -97,6 +97,7 @@ add_library(oscar STATIC
     Maths/BVHCollision.hpp
     Maths/BVHNode.hpp
     Maths/BVHPrim.hpp
+    Maths/Circle.hpp
     Maths/CollisionTests.hpp
     Maths/Disc.hpp
     Maths/EasingFunctions.hpp
