--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -46,16 +46,19 @@ add_library(OpenSimCreator STATIC
     Documents/MeshImporter/StationEl.cpp
     Documents/MeshImporter/StationEl.hpp
 
+    Documents/MeshWarper/TPSDocument.cpp
     Documents/MeshWarper/TPSDocument.hpp
     Documents/MeshWarper/TPSDocumentElement.hpp
     Documents/MeshWarper/TPSDocumentElementID.hpp
     Documents/MeshWarper/TPSDocumentElementType.hpp
+    Documents/MeshWarper/TPSDocumentHelpers.cpp
     Documents/MeshWarper/TPSDocumentHelpers.hpp
     Documents/MeshWarper/TPSDocumentInputIdentifier.hpp
     Documents/MeshWarper/TPSDocumentLandmarkPair.hpp
     Documents/MeshWarper/TPSDocumentNonParticipatingLandmark.hpp
     Documents/MeshWarper/TPSWarpResultCache.hpp
     Documents/MeshWarper/UndoableTPSDocument.hpp
+    Documents/MeshWarper/UndoableTPSDocumentActions.cpp
     Documents/MeshWarper/UndoableTPSDocumentActions.hpp
 
     Documents/Model/BasicModelStatePair.cpp
