Rename DOM/ to Object/ and fix other compiler issues

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -26,16 +26,6 @@ add_library(oscar STATIC
     Bindings/ImGuizmoHelpers.hpp
     Bindings/SDL2Helpers.hpp
 
-    DOM/Class.cpp
-    DOM/Class.hpp
-    DOM/Node.hpp
-    DOM/NodePath.cpp
-    DOM/NodePath.hpp
-    DOM/Object.cpp
-    DOM/Object.hpp
-    DOM/PropertyInfo.cpp
-    DOM/PropertyInfo.hpp
-
     Formats/CSV.hpp
     Formats/CSV.cpp
     Formats/DAE.hpp
@@ -141,6 +131,16 @@ add_library(oscar STATIC
     Maths/Vec2.hpp
     Maths/Vec3.hpp
     Maths/Vec4.hpp
+
+    Object/Class.cpp
+    Object/Class.hpp
+    Object/Node.hpp
+    Object/NodePath.cpp
+    Object/NodePath.hpp
+    Object/Object.cpp
+    Object/Object.hpp
+    Object/PropertyInfo.cpp
+    Object/PropertyInfo.hpp
 
     Platform/App.cpp
     Platform/App.hpp
@@ -280,11 +280,12 @@ add_library(oscar STATIC
     Utils/UID.hpp
     Utils/UndoRedo.cpp
     Utils/UndoRedo.hpp
-    Utils/Variant.cpp
-    Utils/Variant.hpp
-    Utils/VariantType.cpp
-    Utils/VariantType.hpp
- "Graphics/ColorHSLA.cpp")
+
+    Variant/Variant.cpp
+    Variant/Variant.hpp
+    Variant/VariantType.cpp
+    Variant/VariantType.hpp
+)
 
 target_include_directories(oscar PUBLIC
 
