--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -2,12 +2,6 @@ include(GoogleTest)
 find_package(GTest REQUIRED CONFIG)
 
 add_executable(testoscar
-    DOM/TestClass.cpp
-    DOM/TestNode.cpp
-    DOM/TestNodePath.cpp
-    DOM/TestObject.cpp
-    DOM/TestPropertyInfo.cpp
-
     Formats/TestCSV.cpp
     Formats/TestDAE.cpp
 
@@ -28,6 +22,12 @@ add_executable(testoscar
 
     Maths/TestBVH.cpp
 
+    Object/TestClass.cpp
+    Object/TestNode.cpp
+    Object/TestNodePath.cpp
+    Object/TestObject.cpp
+    Object/TestPropertyInfo.cpp
+
     Platform/TestAppSettingValueType.cpp
 
     Scene/TestSceneCache.cpp
@@ -39,8 +39,9 @@ add_executable(testoscar
     Utils/TestFilenameExtractor.cpp
     Utils/TestStringHelpers.cpp
     Utils/TestStringName.cpp
-    Utils/TestVariant.cpp
-    Utils/TestVariantType.cpp
+
+    Variant/TestVariant.cpp
+    Variant/TestVariantType.cpp
 
     testoscar.cpp  # entry point
 )
