--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(testoscar
     Graphics/TestCullMode.cpp
     Graphics/TestGraphicsHelpers.cpp
     Graphics/TestSubMeshDescriptor.cpp
+    Graphics/TestMesh.cpp
     Graphics/TestRenderer.cpp
     Graphics/TestRenderTarget.cpp
     Graphics/TestRenderTargetColorAttachment.cpp
