--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -11,6 +11,13 @@ add_library(OpenSimCreator STATIC
     ComponentRegistry/StaticComponentRegistries.cpp
     ComponentRegistry/StaticComponentRegistries.hpp
 
+    Documents/Frames/FrameAxis.cpp
+    Documents/Frames/FrameAxis.hpp
+    Documents/Frames/FrameDefinition.hpp
+    Documents/Frames/FramesFile.hpp
+    Documents/Frames/FramesHelpers.cpp
+    Documents/Frames/FramesHelpers.hpp
+
     Documents/Landmarks/Landmark.hpp
     Documents/Landmarks/LandmarkCSVFlags.hpp
     Documents/Landmarks/LandmarkHelpers.cpp
