Refactor MeshWarpPairing::Check into separate ValidationCheck class (#491)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -102,6 +102,7 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/MeshWarpPairingLookup.hpp
     Documents/ModelWarper/ModelWarpConfiguration.cpp
     Documents/ModelWarper/ModelWarpConfiguration.hpp
+    Documents/ModelWarper/ValidationCheck.hpp
 
     Documents/Simulation/ForwardDynamicSimulation.cpp
     Documents/Simulation/ForwardDynamicSimulation.hpp
