Refactor UIState and UI-independent details into Document (#491)

--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(TestOpenSimCreator
     Documents/Model/TestUndoableModelActions.cpp
     Documents/Model/TestUndoableModelStatePair.cpp
     Documents/ModelWarper/TestDocument.cpp
+    Documents/ModelWarper/TestFrameDefinitionLookup.cpp
+    Documents/ModelWarper/TestMeshWarpPairingLookup.cpp
     Documents/Simulation/TestForwardDynamicSimulation.cpp
     Graphics/TestOpenSimDecorationGenerator.cpp
     MetaTests/TestOpenSimLibraryAPI.cpp
