Refactor validation check response into its own header (#491)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -103,6 +103,7 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/ModelWarpConfiguration.cpp
     Documents/ModelWarper/ModelWarpConfiguration.hpp
     Documents/ModelWarper/ValidationCheck.hpp
+    Documents/ModelWarper/ValidationCheckConsumerResponse.hpp
 
     Documents/Simulation/ForwardDynamicSimulation.cpp
     Documents/Simulation/ForwardDynamicSimulation.hpp
