Refactor Detail into its own class (#491)

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -91,6 +91,7 @@ add_library(OpenSimCreator STATIC
     Documents/Model/VirtualConstModelStatePair.hpp
     Documents/Model/VirtualModelStatePair.hpp
 
+    Documents/ModelWarper/Detail.hpp
     Documents/ModelWarper/Document.cpp
     Documents/ModelWarper/Document.hpp
     Documents/ModelWarper/FrameDefinitionLookup.cpp
