Add NUM_FLAGS and refactor enums codebase-wide to follow new patterns

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(testoscar
     Shims/Cpp20/TestBit.cpp
 
     Utils/TestCStringView.cpp
+    Utils/TestEnumHelpers.cpp
     Utils/TestFileChangePoller.cpp
     Utils/TestFilenameExtractor.cpp
     Utils/TestNonTypelist.cpp
